--- a/public/reg2020/index.html
+++ b/public/reg2020/index.html
@@ -64,7 +64,7 @@
 <li>📚 <a href="/regression/regression2.html">Slide 2: Simple Linear Regression</a></li>
 <li><a href="/regression/tutorial_1.pdf">Tutorial 1</a></li>
 <li>📚 <a href="/regression/regression3.html">Slide 3: Simple Linear Regression</a></li>
-<li>📚 <a href="/regression/regression4.html">Basics of R Programming</a></li>
+<li>📚 <a href="/regression/regression4.html">Slide 4: Simple Linear Regression</a></li>
 <li>📚 <a href="/regression/regression5.html">Basics of R Programming</a></li>
 </ol>
 
