--- a/public/reg2020/index.html
+++ b/public/reg2020/index.html
@@ -67,7 +67,7 @@
 <li>📚 <a href="/regression/regression4.html">Slide 4: Simple Linear Regression</a></li>
 <li>📚 <a href="/regression/regression5.html">Basics of R Programming</a></li>
 <li>📚 <a href="/regression/SimpleLinearRegression2.html">Regression Analysis with R</a></li>
-<li>[Data][/regression/house.csv]</li>
+<li><a href="/regression/house.csv">house.csv</a></li>
 </ol>
 
     </div>
