--- a/public/regression/regression3.html
+++ b/public/regression/regression3.html
@@ -401,7 +401,7 @@ Measures the variation of  `\(y\)` values around their mean.
 
 Notation: `\(SS_{R}\)` or `\(SS_{E}\)` - A measure of the variability in `\(y\)` remaining after `\(x\)` has been considered.
 
-`\(R^2\)` - Proportion of variation explained by the regressor `\(x\)`.
+`\(R^2\)` - Proportion of variation in `\(Y\)` explained by the relation relationship of `\(Y\)` with `\(x\)`.
 
 
 ---
