--- a/static/regression/regression4.html
+++ b/static/regression/regression4.html
@@ -656,7 +656,7 @@ In general, the larger the confidence coefficient `\((1-\alpha)\)` is, the wider
  
 &gt; ii. how much of the variation is left unexplained by the regression model (called the “Residual” or “Error”) - **SSE (Residual or error sum of squares)**.
 
-`$$\sum_{i=1}^n(y_i - \bar{y})^2=\sum_{i=1}^n(\hat{y}_i - \bar{y})^2 + \sum_{i=1}^n(y_i - \hat{y_i})^2$$`
+`$$\sum_{i=1}^n(y_i - \bar{y})^2=\sum_{i=1}^n(\hat{Y}_i - \bar{y})^2 + \sum_{i=1}^n(y_i - \hat{Y_i})^2$$`
 
 `$$SST = SSM + SSE$$`
 
