--- a/public/regression/regression3.html
+++ b/public/regression/regression3.html
@@ -410,7 +410,7 @@ Notation: `\(SS_{R}\)` or `\(SS_{E}\)` - A measure of the variability in `\(y\)`
 
 `$$0 \leq R^2 \leq 1$$`.
 
-Values of `\(R^2\)` that are close to 1 imply that most of the variability in `\(y\)` is explained by the regression model.
+Values of `\(R^2\)` that are close to 1 imply that most of the variability in `\(Y\)` is explained by the regression model.
 
 `\(R^2\)` should be interpreted with caution. (We will talk more on this in multiple linear regression analysis)
 
