--- a/static/regression/regression4.html
+++ b/static/regression/regression4.html
@@ -656,7 +656,11 @@ Frequency interpretation:
 
 If we were to take repeated samples of the same size at the same `\(X\)` levels and construct, for example, `\(95\%\)` confidence intervals on the slope for each sample, then `\(95\%\)` of those intervals will contain the true value `\(\beta_1\)`.
 
+We therefore have considerable *confidence* that the observed interval, here (04792, 0.5608), covers the true `\(\beta_1\)`. The measure of confidence is .95. Here, .95 is called the confidence coefficient.
+
 In general, the larger the confidence coefficient `\((1-\alpha)\)` is, the wider the confidence interval.
+
+.content-box-green[page 375, Mood and Graybill, Introduction to the theory of statistics]
 ---
 
 ## Analysis of variance - ANOVA
