--- a/public/reg2020/index.html
+++ b/public/reg2020/index.html
@@ -69,6 +69,7 @@
 <li>📚 <a href="/regression/SimpleLinearRegression2.html">Regression Analysis with R</a></li>
 <li><a href="/regression/house.csv">house.csv</a></li>
 <li><a href="/regression/tutorial2.pdf">Tutorial 2</a></li>
+<li><a href="/regression/othersoftware.html">Other software</a></li>
 </ol>
 
     </div>
