--- a/public/reg2020/index.html
+++ b/public/reg2020/index.html
@@ -70,6 +70,8 @@
 <li><a href="/regression/house.csv">house.csv</a></li>
 <li><a href="/regression/tutorial2.pdf">Tutorial 2</a></li>
 <li><a href="/regression/othersoftware.html">Other software</a></li>
+<li><a href="/regression/heart.data.csv">heart.data.csv</a></li>
+<li>📚 <a href="/regression/regression6.html">Multiple Linear Regression</a></li>
 </ol>
 
     </div>
