--- a/public/regression/regression6.html
+++ b/public/regression/regression6.html
@@ -225,7 +225,7 @@ More than 2 independent variables: Hard to visualize.
 
     - How well it fits the data
 
-    - Is it useful
+    - Is it useful?
 
     - Are any required conditions violated?
 
