--- a/public/regression/regression6.html
+++ b/public/regression/regression6.html
@@ -223,7 +223,7 @@ More than 2 independent variables: Hard to visualize.
 
 3. Assess the model
 
-    - How well it fits the data
+    - How well it fits the data?
 
     - Is it useful?
 
@@ -231,11 +231,11 @@ More than 2 independent variables: Hard to visualize.
 
 4. Employ the model
 
-    - Interpreting the coefficients
+    - Interpreting the coefficients.
 
-    - Predictions using the prediction equation
+    - Predictions using the prediction equation.
 
-    - Estimating the expected value of the dependent variable
+    - Estimating the expected value of the dependent variable.
 
 
 ---
