--- a/public/ictc2020/index.html
+++ b/public/ictc2020/index.html
@@ -83,6 +83,7 @@
 <p>Due date: 17 September 2020</p>
 <p>Submit .Rmd file and HTML file</p>
 <p>Data set: <a href="/static/data/facebookdata_marketing.rds">Data-facebookdata_marketing.rds</a></p>
+<p><a href="/static/ISF2020/ISF_2020_Thiyanga_S_Talagala.html">*</a></p>
 
     </div>
   </article>
