--- a/public/regression/regression7.html
+++ b/public/regression/regression7.html
@@ -224,9 +224,6 @@ Total | `\(n-1\)` | `\(\sum_{i=1}^{n}(y_i-\bar{y})^2\)` | | | |
 
 ## Multiple Linear Regression Analysis - ANOVA
 
-`\(Y\)` - heart.disease
-
-`\(X\)` variables - biking and smoking
 
 
 ```
@@ -242,7 +239,12 @@ Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1
 
 `\(Y = \beta_0 + \beta_1 X_1 + \beta_2 X_2 + \epsilon\)`
 
-Your turn: Interpret the terms in the model
+`\(Y\)` - percentage of people in each town who have heart disease
+
+`\(X_1\)` - percentage of people in each town who bike to work
+
+`\(X_2\)` - percentage of people in each town who smoke
+
 
 ### Test for Significance of Regression
 
@@ -287,7 +289,45 @@ F-statistic: 1.19e+04 on 2 and 495 DF,  p-value: &lt; 2.2e-16
 ```
 
 ---
-## Tests on Individual Regression Coefficients (cont)
+### Tests on Individual Regression Coefficients (cont)
+
+
+```
+
+Call:
+lm(formula = heart.disease ~ biking + smoking, data = heart.data)
+
+Residuals:
+    Min      1Q  Median      3Q     Max 
+-2.1789 -0.4463  0.0362  0.4422  1.9331 
+
+Coefficients:
+             Estimate Std. Error t value Pr(&gt;|t|)    
+(Intercept) 14.984658   0.080137  186.99   &lt;2e-16 ***
+biking      -0.200133   0.001366 -146.53   &lt;2e-16 ***
+smoking      0.178334   0.003539   50.39   &lt;2e-16 ***
+---
+Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1
+
+Residual standard error: 0.654 on 495 degrees of freedom
+Multiple R-squared:  0.9796,	Adjusted R-squared:  0.9795 
+F-statistic: 1.19e+04 on 2 and 495 DF,  p-value: &lt; 2.2e-16
+```
+
+`\(H_0: \beta_1 =  0\)`  vs `\(H_1: \beta_1 \neq 0\)`
+
+`\(p-value &lt; 0.05\)`, we reject `\(H_0\)` under 0.05 level of significance and conclude that the regressor `biking` or `\(X_1\)`, contributes significantly to the model given that `smoking`, `\(X_2\)` is also in the model.
+
+---
+
+## Partial test for smoking
+
+- Write down the hypotheses
+
+- Write the decision and conclusions
+
+
+
 ---
 ## Next Lecture
 
