link new slides

--- a/public/reg2020/index.html
+++ b/public/reg2020/index.html
@@ -73,6 +73,9 @@
 <li><a href="/regression/heart.data.csv">heart.data.csv</a></li>
 <li>📚 <a href="/regression/regression6.html">Multiple Linear Regression</a></li>
 <li>📚 <a href="/regression/regression7.html">ANOVA</a></li>
+<li>📚 <a href="/regression/regression8.html">Confidence Intervals in Multiple Regression</a></li>
+<li>📚 <a href="/regression/regression9.html">Transformations to Correct Model Inadequacies</a></li>
+<li>📚 <a href="/regression/regression10.html">Identifying Outliers and Influential Cases</a></li>
 </ol>
 
     </div>
