--- a/static/regression/regression9.html
+++ b/static/regression/regression9.html
@@ -28,13 +28,200 @@ class: center, middle, inverse, title-slide
 
 ## Introduction
 
+In this section we are going to learn methods and procedures for building regression models when the assumptions are violated.
+
 ---
+class: duke-orange, middle
+
 
 ## Variance-Stabilizing Transformations
 
 ---
 
+## Data set 1
+
+We will try to model salary as a function of years of experience.
+
+
+```r
+library(tidyverse)
+salarydata &lt;- read_csv("salarydata.csv")
+salarydata
+```
+
+```
+# A tibble: 100 x 2
+   years salary
+   &lt;dbl&gt;  &lt;dbl&gt;
+ 1     1  41504
+ 2     1  32619
+ 3     1  44322
+ 4     2  40038
+ 5     2  46147
+ 6     2  38447
+ 7     2  38163
+ 8     3  42104
+ 9     3  25597
+10     3  39599
+# … with 90 more rows
+```
+
+Data are obtained from: https://daviddalpiaz.github.io/appliedstats/transformations.html
+
+---
+
+## Salary vs Years of Experience
+
+
+```r
+ggplot(salarydata, aes(x=years, y=salary)) + geom_point()
+```
+
+![](regression9_files/figure-html/unnamed-chunk-2-1.png)&lt;!-- --&gt;
+
+```r
+cor(salarydata$years, salarydata$salary)
+```
+
+```
+[1] 0.9133066
+```
+
+---
+## Fit a Simple Linear Regression Model
+
+
+```r
+salary_fit &lt;- lm(salary ~ years, data = salarydata)
+summary(salary_fit)
+```
+
+```
+
+Call:
+lm(formula = salary ~ years, data = salarydata)
+
+Residuals:
+   Min     1Q Median     3Q    Max 
+-57225 -18104    241  15589  91332 
+
+Coefficients:
+            Estimate Std. Error t value Pr(&gt;|t|)    
+(Intercept)     5302       5750   0.922    0.359    
+years           8637        389  22.200   &lt;2e-16 ***
+---
+Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1
+
+Residual standard error: 27360 on 98 degrees of freedom
+Multiple R-squared:  0.8341,	Adjusted R-squared:  0.8324 
+F-statistic: 492.8 on 1 and 98 DF,  p-value: &lt; 2.2e-16
+```
+
+
+---
+
+## Compute Residuals and Fitted Values
+
+
+```r
+library(broom)
+salary_residuals &lt;- augment(salary_fit)
+salary_residuals
+```
+
+```
+# A tibble: 100 x 8
+   salary years .fitted .resid .std.resid   .hat .sigma  .cooksd
+    &lt;dbl&gt; &lt;dbl&gt;   &lt;dbl&gt;  &lt;dbl&gt;      &lt;dbl&gt;  &lt;dbl&gt;  &lt;dbl&gt;    &lt;dbl&gt;
+ 1  41504     1  13939. 27565.      1.03  0.0391 27347. 0.0215  
+ 2  32619     1  13939. 18680.      0.697 0.0391 27428. 0.00988 
+ 3  44322     1  13939. 30383.      1.13  0.0391 27315. 0.0261  
+ 4  40038     2  22575. 17463.      0.650 0.0345 27436. 0.00753 
+ 5  46147     2  22575. 23572.      0.877 0.0345 27388. 0.0137  
+ 6  38447     2  22575. 15872.      0.590 0.0345 27447. 0.00622 
+ 7  38163     2  22575. 15588.      0.580 0.0345 27449. 0.00600 
+ 8  42104     3  31212. 10892.      0.404 0.0302 27473. 0.00255 
+ 9  25597     3  31212. -5615.     -0.208 0.0302 27490. 0.000677
+10  39599     3  31212.  8387.      0.311 0.0302 27482. 0.00151 
+# … with 90 more rows
+```
+
+
+---
+
+## Residuals vs Fitted Values
+
+
+```r
+ggplot(salary_residuals, aes(x=.fitted, y=.resid)) + geom_point()
+```
+
+![](regression9_files/figure-html/unnamed-chunk-5-1.png)&lt;!-- --&gt;
+
+
+---
+
+## Normality assumption
+
+
+.pull-left[
+
+
+```r
+qplot(data=salary_residuals,
+      x=.resid,)+
+  geom_histogram(color="black", 
+                 fill="lightblue")
+```
+
+![](regression9_files/figure-html/unnamed-chunk-6-1.png)&lt;!-- --&gt;
+
+
+```r
+shapiro.test(salary_residuals$.resid)
+```
+
+```
+
+	Shapiro-Wilk normality test
+
+data:  salary_residuals$.resid
+W = 0.98258, p-value = 0.2101
+```
+
+
+]
+
+.pull-right[
+
+
+```r
+ggplot(salary_residuals, 
+       aes(sample=.resid))+
+  stat_qq() + 
+  stat_qq_line() +
+  labs(x="Theoretical Quantiles",
+       y="Sample Quantiles")
+```
+
+![](regression9_files/figure-html/unnamed-chunk-8-1.png)&lt;!-- --&gt;
+
+
+
+
+]
+
+
+
+---
+
+
+
+class: duke-orange, middle
+
 ## Transformations to Linearize the Model
+
+&lt;!--https://ademos.people.uic.edu/Chapter12.html--&gt;
 
 ---
 
